add morphology class

--- a/utils/color.html
+++ b/utils/color.html
@@ -6,6 +6,13 @@
     <style>
         b {
             color: #12e5be;
+            color: #F34B3F;
+            color: #38d70c;
+            color: #0c4cd5;
+            /*color: #0c4cd5;*/
+            color: #e5e212;
+
+            color: #12e5be;
         }
     </style>
 </head>
